app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  // position: absolute;
  width: 100vw;
  padding: 20px 40px;
  justify-content: space-between;
  background-color: #333;
}
// .navbar-lewagon {
//   overflow: hidden;
//   background-color: #333;
//   position: fixed; /* Set the navbar to fixed position */
//   top: 0; /* Position the navbar at the top of the page */
//   width: 100%; /* Full width */
//   justify-content: space-between;
//   padding: 20px 40px;
// }

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-lewagon .navbar-brand img {
  width: 150px;
}

.navbar-light .navbar-nav .nav-link {
  color: #44c676 !important;
}

.navbar-light .navbar-nav .nav-link:hover {
  color: #bef7d3 !important;
}

body, html {
   min-height: 100vh;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    margin: 0 0 80px;
    /* bottom = footer height */
    padding: 0px;
}

